--- a/style.css
+++ b/style.css
@@ -33,13 +33,28 @@ footer {
   background-color: rgb(72, 72, 189);
 }
 
+div {
+  display: block;
+}
 [type="text"] {
   display: block;
   outline: none;
   background-color: transparent;
 }
 
-[type="button"] {
+[type="submit"] {
   background-color: rgb(72, 72, 189);
   color: white;
+}
+
+.pan {
+  text-decoration: line-through;
+}
+
+.leche {
+  text-decoration: line-through;
+}
+
+.pan:hover {
+  color: orange;
 }
