--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 nav {
   background-color: rgb(78, 99, 149);
   display: flex;
+  justify-content: space-around;
 }
 
 h1 {
@@ -25,17 +26,17 @@ section {
   justify-content: space-around;
 }
 
-main {
-  background-color: ;
-}
-
 footer {
   background-color: rgb(72, 72, 189);
+  display: flex;
+  align-items: center;
 }
 
-div {
-  display: block;
+form {
+  height: 500px;
+  outline: none;
 }
+
 [type="text"] {
   display: block;
   outline: none;
@@ -57,4 +58,18 @@ div {
 
 .pan:hover {
   color: orange;
+}
+
+span {
+  margin-right: 0;
+}
+
+img {
+  position: relative;
+  left: 50%;
+}
+
+.price {
+  display: flex;
+  justify-content: flex-end;
 }
